tests/transpiler/x/cpp/match_full.cpp
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:20:11 GMT+7
#include <iostream>
#include <string>
#include <sstream>
#include <iomanip>


std::string classify(int n) {
    return ((n == 0) ? std::string("zero") : ((n == 1) ? std::string("one") : std::string("many")));
}

auto x = 2;
auto label = ((x == 1) ? std::string("one") : ((x == 2) ? std::string("two") : ((x == 3) ? std::string("three") : std::string("unknown"))));
auto day = std::string("sun");
auto mood = ((day == std::string("mon")) ? std::string("tired") : ((day == std::string("fri")) ? std::string("excited") : ((day == std::string("sun")) ? std::string("relaxed") : std::string("normal"))));
auto ok = true;
auto status = ((ok == true) ? std::string("confirmed") : ((ok == false) ? std::string("denied") : ));

int main() {
    std::cout << std::boolalpha << label << std::endl;
    std::cout << std::boolalpha << mood << std::endl;
    std::cout << std::boolalpha << status << std::endl;
    std::cout << std::boolalpha << classify(0) << std::endl;
    std::cout << std::boolalpha << classify(5) << std::endl;
    return 0;
}
